# agentbase

./: .gitignore  LICENSE  README.md  README_CN.md  agentbase.yaml.example  main.py  pyproject.toml
benchmarks/: README.md  evaluate_qa.py  evaluate_qa_async.py  evaluate_with_dashscope.py  run_locomo.py  run_longmemeval.py
docs/: BENCHMARK.md  USAGE.md  USAGE_EN.md
tests/: conftest.py
tests/cli/: test_main.py
tests/core/: test_background_jobs.py  test_context_entry.py  test_hardening.py  test_hybrid_index.py  test_local_fact.py  test_ner_extractor.py  test_query_decompose.py  test_retrieval_engine.py  test_services.py  test_spec_compliance.py  test_sqlite_store.py
tests/integration/: test_conversation_retrieval.py  test_end_to_end.py  test_full_engine.py
tests/mcp/: test_server.py
